--- a/STUDY/4.서버구축.md
+++ b/STUDY/4.서버구축.md
@@ -34,6 +34,21 @@
 
 ### EC2 서버에 환경 구축하기
 
+- 작성했던 예매 알리미를 서버에 올려서 서버에서 실행시키기.
+
+- 파일을 올리기 앞서 서버에 모듈과 파이선 설치 등 해주기
+
+  ```
+  python3 --version
+  sudo apt-get update
+  sudo apt-get install python3-pip
+  pip3 install requests bs4 python-telegram-bot apscheduler
+  ```
+
+- 서버에 기본환경 구축 끝
+
+
+
 ### EC2 서버에 알리미 파일 전송하기
 
 ### EC2 서버에서 알리미 실행시키기
