--- a/STUDY/4.서버구축.md
+++ b/STUDY/4.서버구축.md
@@ -20,13 +20,13 @@
 
     4. 퍼블릭 DNS을(를) 사용하여 인스턴스에 연결:
 
-       ```
+       ```bash
        ec2-3-19-211-233.us-east-2.compute.amazonaws.com
        ```
 
     **예:**
 
-    ```
+    ```bash
     ssh -i "aws-key.pem" ubuntu@ec2-3-19-211-233.us-east-2.compute.amazonaws.com
     ```
 
@@ -38,7 +38,7 @@
 
 - 파일을 올리기 앞서 서버에 모듈과 파이선 설치 등 해주기
 
-  ```
+  ```bash
   python3 --version
   sudo apt-get update
   sudo apt-get install python3-pip
@@ -51,9 +51,29 @@
 
 ### EC2 서버에 알리미 파일 전송하기
 
+- 서버에 올리는 가장 기본적인 방법은 git으로 올리고 내려받는 방법
+- 나 같은 경우 python 1개이기 때문에 파일질러로.
+
+
+
 ### EC2 서버에서 알리미 실행시키기
 
+- 파일을 백그라운드로 실행시키게 되면 터미널을 끊어도 실행시켜짐.
+
+  - ```bash
+    nohup pytho3 파일이름 &
+    ```
+
+  - 서버의 연결이 끊어도 정상적으로 작동됨.
 
 
 
+- 실핼중인프로세스종료
+
+  ```bash
+  ps -ef
+  kill -9 [PID]
+  ```
+
+  
 
